--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ body {
 
 .start-container,
 .main-container,
-.catalog-container {
+.catalog-container,
+.exercise-container,
+.quiz-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -34,6 +36,7 @@ body {
   background: url("../source/BG_Earth2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  text-align: center;
 }
 .start-container__title {
   margin-top: 250px;
@@ -197,6 +200,145 @@ body {
   border-top: 2px solid #222;
 }
 
+.exercise-container {
+  display: none;
+  top: -100%;
+}
+.exercise-container .text {
+  cursor: pointer;
+  font-size: 30px;
+  font-weight: 400;
+  transition: 0.3s;
+}
+.exercise-container .text:hover {
+  text-shadow: 1px 3px 0 #969696, 1px 13px 5px #aba8a8;
+}
+.exercise-container__north, .exercise-container__zodiac, .exercise-container__south {
+  width: 100%;
+  height: 40%;
+}
+.exercise-container__north {
+  background: url("../source/north.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+}
+.exercise-container__zodiac {
+  width: 100%;
+  height: 20%;
+  position: relative;
+  z-index: 9;
+  border: 4px solid #222;
+}
+.exercise-container__loop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 100%;
+  z-index: 11;
+  background: url("../source/Zodiac.jpeg");
+  background-repeat: repeat-x;
+  animation: ZodiacLoop 60s linear infinite;
+}
+.exercise-container__south {
+  background: url("../source/south.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 30px;
+}
+.exercise-container__zodiac-text {
+  position: absolute;
+  top: 0;
+  left: -2%;
+  z-index: 12;
+  width: 104%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.quiz-container {
+  display: none;
+  top: -100%;
+}
+.quiz-container .text {
+  cursor: pointer;
+  font-size: 35px;
+  font-weight: 400;
+  transition: 0.3s;
+}
+.quiz-container .text:hover {
+  text-shadow: 1px 3px 0 #969696, 1px 13px 5px #aba8a8;
+}
+.quiz-container__top {
+  display: flex;
+  width: 100%;
+  height: 70%;
+}
+.quiz-container__left {
+  border-right: 2px solid #222;
+  background: url("../source/left.jpg");
+}
+.quiz-container__center {
+  background: url("../source/center.jpg");
+}
+.quiz-container__right {
+  border-left: 2px solid #222;
+  background: url("../source/right.jpg");
+}
+.quiz-container__bottom {
+  border-top: 2px solid #222;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 30%;
+  background: url("../source/bottom.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.quiz-container__left, .quiz-container__center, .quiz-container__right {
+  height: 100%;
+  width: 33.3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.quiz-container__right {
+  width: 33.4%;
+}
+
+.back-button {
+  position: absolute;
+  top: 90%;
+  left: 95%;
+  width: 40px;
+  height: 40px;
+  z-index: 13;
+  cursor: pointer;
+  font-size: 20px;
+  transition: 0.3s;
+}
+
+.back-button:hover {
+  text-shadow: 1px 3px 0 #0be2f1, 1px 13px 5px #aba8a8;
+}
+
 @keyframes WrapperBG {
   0% {
     opacity: 0;
@@ -215,12 +357,28 @@ body {
     top: 100%;
   }
 }
+@keyframes zoomBottom2Main {
+  0% {
+    top: 100%;
+  }
+  100% {
+    top: 0;
+  }
+}
 @keyframes zoomTopStart {
   0% {
     top: 0;
   }
   100% {
     top: 100%;
+  }
+}
+@keyframes zoomTopContainer {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: -100%;
   }
 }
 @keyframes zoomBottomMain {
@@ -259,6 +417,34 @@ body {
   }
   100% {
     background-position: top;
+  }
+}
+@keyframes ZodiacLoop {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: -99%;
+  }
+}
+@keyframes ZodiacShirma {
+  0% {
+    opacity: 0;
+    background: transparent;
+  }
+  100% {
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.5);
+  }
+}
+@keyframes ZodiacShirmaReverse {
+  0% {
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.5);
+  }
+  100% {
+    opacity: 0;
+    background: transparent;
   }
 }
 ::-webkit-scrollbar {
