--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ body {
 .exercise-container {
   display: none;
   top: -100%;
+  z-index: 10;
 }
 .exercise-container .text {
   cursor: pointer;
@@ -266,6 +267,129 @@ body {
   justify-content: center;
   opacity: 0;
   transition: 0.3s;
+}
+.exercise-container .exercise-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100%;
+  z-index: 11;
+  display: flex;
+  background: transparent;
+  align-items: center;
+  margin-left: 35vw;
+  transition: 0.5s;
+}
+.exercise-container .exercise-block .current {
+  transform: scale(1);
+  filter: blur(0px);
+}
+.exercise-container .exercise-block .current .cover {
+  display: none;
+}
+.exercise-container .exercise-block__block {
+  position: relative;
+  z-index: 12;
+  filter: blur(6px);
+  margin: 0px 20px;
+  transform: scale(0.8);
+  overflow: hidden;
+  width: 400px;
+  height: 700px;
+  border: 5px double rgba(34, 34, 34, 0.6);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s;
+  align-items: center;
+  background: rgba(34, 34, 34, 0.3);
+}
+.exercise-container .exercise-block__block .cover {
+  display: block;
+  position: absolute;
+  z-index: 13;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.exercise-container .exercise-block__image {
+  height: 40%;
+  width: 100%;
+  position: relative;
+}
+.exercise-container .exercise-block__image img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.exercise-container .exercise-block__name, .exercise-container .exercise-block__description, .exercise-container .exercise-block__features, .exercise-container .exercise-block__studied, .exercise-container .exercise-block__buttons {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  width: 100%;
+  text-align: center;
+  height: 10%;
+  border-top: 2px solid #222;
+  background-color: rgba(128, 128, 128, 0.3);
+  transition: 0.3s;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+.exercise-container .exercise-block__name:hover, .exercise-container .exercise-block__description:hover, .exercise-container .exercise-block__features:hover, .exercise-container .exercise-block__studied:hover, .exercise-container .exercise-block__buttons:hover {
+  background-color: rgba(128, 0, 128, 0.1);
+}
+.exercise-container .exercise-block__name {
+  font-size: 24px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+.exercise-container .exercise-block__description {
+  height: 15%;
+}
+.exercise-container .exercise-block__features {
+  height: 15%;
+}
+.exercise-container .exercise-block__features ul {
+  width: 100%;
+  height: 100%;
+}
+.exercise-container .exercise-block__features ul li {
+  padding: 5px;
+  padding-left: 15px;
+  text-align: left;
+}
+.exercise-container .exercise-block__studied:hover {
+  cursor: pointer;
+  font-size: 16px;
+  background-color: rgba(0, 128, 0, 0.1);
+}
+.exercise-container .exercise-block__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+}
+.exercise-container .exercise-block__previous, .exercise-container .exercise-block__next {
+  cursor: pointer;
+  background: transparent;
+  padding: 10px;
+  border-radius: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border: 0;
+  box-shadow: 0px 0px 12px 0px rgba(32, 158, 187, 0.2);
+  color: white;
+  transition: 0.3s;
+}
+.exercise-container .exercise-block__previous:hover, .exercise-container .exercise-block__next:hover {
+  box-shadow: 0px 0px 12px 7px rgba(255, 255, 255, 0.3);
+  letter-spacing: 1.5px;
 }
 
 .quiz-container {
