--- a/style.scss
+++ b/style.scss
@@ -239,6 +239,7 @@ body {
 .exercise-container {
     display: none;
     top: -100%;
+    z-index: 10;
 
     .text {
         cursor: pointer;
@@ -314,6 +315,166 @@ body {
         opacity: 0;
         transition: .3s;
     }
+
+
+    .exercise-block {
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-width: 100%;
+        height: 100%;
+        z-index: 11;
+        display: flex;
+        background: transparent;
+        align-items: center;
+        margin-left: 35vw;
+        transition: .5s;
+
+        .current {
+            transform: scale(1);
+            filter: blur(0px);
+
+            .cover {
+                display: none;
+            }
+
+        }
+
+        &__block {
+
+            position: relative;
+            z-index: 12;
+
+            .cover {
+                display: block;
+                position: absolute;
+                z-index: 13;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+            }
+
+            filter: blur(6px);
+            margin: 0px 20px;
+            transform: scale(0.8);
+            overflow: hidden;
+            width: 400px;
+            height: 700px;
+            border: 5px double rgba($color: #222, $alpha: 0.6);
+            border-radius: 15px;
+            display: flex;
+            flex-direction: column;
+            transition: .5s;
+            align-items: center;
+            background: rgba($color: #222, $alpha: 0.3);
+        }
+
+        &__image {
+            height: 40%;
+            width: 100%;
+            position: relative;
+
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+
+        &__name,
+        &__description,
+        &__features,
+        &__studied,
+        &__buttons {
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            width: 100%;
+            text-align: center;
+            height: 10%;
+            border-top: 2px solid #222;
+            background-color: rgba($color: gray, $alpha: 0.3);
+            transition: .3s;
+            flex-direction: column;
+            overflow-y: scroll;
+        }
+
+        &__name:hover,
+        &__description:hover,
+        &__features:hover,
+        &__studied:hover,
+        &__buttons:hover {
+            background-color: rgba($color: purple, $alpha: 0.1);
+        }
+
+        &__name {
+            font-size: 24px;
+            letter-spacing: 1.5px;
+            text-transform: uppercase;
+        }
+
+        &__description {
+            height: 15%;
+        }
+
+        &__features {
+            height: 15%;
+
+            ul {
+                li {
+                    padding: 5px;
+                    padding-left: 15px;
+                    text-align: left;
+                }
+
+                width: 100%;
+                height: 100%;
+            }
+
+        }
+
+        &__studied {}
+
+        &__studied:hover {
+            cursor: pointer;
+            font-size: 16px;
+            background-color: rgba($color: green, $alpha: 0.1);
+
+        }
+
+        &__buttons {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: row;
+        }
+
+        &__previous,
+        &__next {
+            cursor: pointer;
+            background: transparent;
+            padding: 10px;
+            border-radius: 15px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            border: 0;
+            box-shadow: 0px 0px 12px 0px rgba(32, 158, 187, 0.2);
+            color: white;
+            transition: .3s;
+
+        }
+
+        &__previous:hover,
+        &__next:hover {
+            box-shadow: 0px 0px 12px 7px rgba(255, 255, 255, 0.3);
+            letter-spacing: 1.5px;
+        }
+    }
+
 }
 
 .quiz-container {
